--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 /* file:///C:/Users/Admin/Downloads/organic-food-website-template/organic-food-website-template/index.html */
-*{
+* {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
 }
 :root {
-  --primary: #3CB815;
-  --secondary: #F65005;
-  --light: #F7F8FC;
+  --primary: #3cb815;
+  --secondary: #f65005;
+  --light: #f7f8fc;
   --dark: #111111;
 }
 
@@ -34,17 +34,14 @@
   background-size: contain;
 }
 
-
-
-
 /*** Navbar ***/
 .fixed-top {
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .top-bar {
   height: 45px;
-  border-bottom: 1px solid rgba(0, 0, 0, .07);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.07);
 }
 
 .navbar .dropdown-toggle::after {
@@ -70,35 +67,34 @@
 
 @media (max-width: 991.98px) {
   .navbar .navbar-nav {
-      margin-top: 10px;
-      border-top: 1px solid rgba(0, 0, 0, .07);
-      background: #FFFFFF;
+    margin-top: 10px;
+    border-top: 1px solid rgba(0, 0, 0, 0.07);
+    background: #ffffff;
   }
 
   .navbar .navbar-nav .nav-link {
-      padding: 10px 0;
+    padding: 10px 0;
   }
 }
 
 @media (min-width: 992px) {
   .navbar .nav-item .dropdown-menu {
-      display: block;
-      visibility: hidden;
-      top: 100%;
-      transform: rotateX(-75deg);
-      transform-origin: 0% 0%;
-      transition: .5s;
-      opacity: 0;
+    display: block;
+    visibility: hidden;
+    top: 100%;
+    transform: rotateX(-75deg);
+    transform-origin: 0% 0%;
+    transition: 0.5s;
+    opacity: 0;
   }
 
   .navbar .nav-item:hover .dropdown-menu {
-      transform: rotateX(0deg);
-      visibility: visible;
-      transition: .5s;
-      opacity: 1;
+    transform: rotateX(0deg);
+    visibility: visible;
+    transition: 0.5s;
+    opacity: 1;
   }
 }
-
 
 /*** Header ***/
 .carousel-caption {
@@ -129,15 +125,15 @@
 
 @media (max-width: 768px) {
   #header-carousel .carousel-item {
-      position: relative;
-      min-height: 450px;
+    position: relative;
+    min-height: 450px;
   }
-  
+
   #header-carousel .carousel-item img {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
@@ -147,9 +143,9 @@
   line-height: 1.2;
 }
 
-h1{
+h1 {
   margin-top: 0;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   font-family: "Lora", serif;
   font-weight: 600;
   line-height: 1.2;
@@ -158,7 +154,7 @@ h1{
 
 /*** About ***/
 .about-img img {
-  position: relative  !important;
+  position: relative !important;
   z-index: 2 !important;
 }
 
@@ -169,12 +165,58 @@ h1{
   left: -50%;
   width: 100%;
   height: 100%;
-  background-image: -webkit-repeating-radial-gradient(#FFFFFF, #EEEEEE 5px, transparent 5px, transparent 10px);
-  background-image: -moz-repeating-radial-gradient(#FFFFFF, #EEEEEE 5px, transparent 5px, transparent 10px);
-  background-image: -ms-repeating-radial-gradient(#FFFFFF, #EEEEEE 5px, transparent 5px, transparent 10px);
-  background-image: -o-repeating-radial-gradient(#FFFFFF, #EEEEEE 5px, transparent 5px, transparent 10px);
-  background-image: repeating-radial-gradient(#FFFFFF, #EEEEEE 5px, transparent 5px, transparent 10px);
+  background-image: -webkit-repeating-radial-gradient(
+    #ffffff,
+    #eeeeee 5px,
+    transparent 5px,
+    transparent 10px
+  );
+  background-image: -moz-repeating-radial-gradient(
+    #ffffff,
+    #eeeeee 5px,
+    transparent 5px,
+    transparent 10px
+  );
+  background-image: -ms-repeating-radial-gradient(
+    #ffffff,
+    #eeeeee 5px,
+    transparent 5px,
+    transparent 10px
+  );
+  background-image: -o-repeating-radial-gradient(
+    #ffffff,
+    #eeeeee 5px,
+    transparent 5px,
+    transparent 10px
+  );
+  background-image: repeating-radial-gradient(
+    #ffffff,
+    #eeeeee 5px,
+    transparent 5px,
+    transparent 10px
+  );
   background-size: 20px 20px;
   transform: skew(20deg);
   z-index: 1;
 }
+/* Why Choose Us section start */
+.WhyChooseUs {
+  background-color: #ffe2be;
+  background-image: url(../src/component/img/backgroundtexture.png);
+  text-align: center;
+  color: #211700;
+  border: #111 1px solid;
+}
+.WhyHeading {
+  border: #111 1px solid;
+  font-size: 60px;
+  font-weight: 600;
+  font-family: "Lora", serif;
+}
+.WhyChooseUs-text {
+  border: #111 1px solid;
+}
+.WhyChooseUs-leftimg {
+  border: #111 1px solid;
+}
+/* Why Choose Us section end */
