--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   padding: 0px;
   box-sizing: border-box;
 }
+
 :root {
   --primary: #3CB815;
   --secondary: #F65005;
@@ -187,4 +188,38 @@ h1{
   background-size: 20px 20px;
   transform: skew(20deg);
   z-index: 1;
+}
+
+
+/*** Product ***/
+.product{
+  width: 100%;
+  height: 100vh;
+  background-color: yellow;
+}
+.product-card{
+  width: 70%;
+}
+.product-card-img{
+  width: 100%;
+  height: 400px;
+}
+.product-card-img img{
+  width: 100%;
+  height: 100%;
+}
+
+/*** Order ***/
+
+.order{
+  width: 100%;
+  height: 100vh;
+}
+.order-img{
+  width: 100%;
+  height: 100%;
+}
+.order-img img{
+  width: 100%;
+  height: 100%;
 }
