--- a/src/App.css
+++ b/src/App.css
@@ -195,10 +195,6 @@ h1{
 .product{
   width: 100%;
   height: 100vh;
-  background-color: yellow;
-}
-.product-card{
-  width: 70%;
 }
 .product-card-img{
   width: 100%;
@@ -213,13 +209,50 @@ h1{
 
 .order{
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
+  padding: 20px 0px;
+}
+.select-order-img{
+  width: 140px;
+  height: 130px;
+}
+.select-order-img img{
+  width: 100%;
+  height: 100%;
 }
 .order-img{
   width: 100%;
-  height: 100%;
+  height: 500px;
 }
 .order-img img{
   width: 100%;
   height: 100%;
+}
+.order-section{
+  padding: 20px 10px;
+  line-height: 0.8;
+}
+.order-card{
+  width: 150px;
+  height: 150px;
+  border: 2px solid green;
+}
+.order-card-head{
+  height: 40px;
+  background-color: #6aac44;
+}
+.order-card-price{
+  height: 50px;
+  line-height: 0.5;
+}
+.highlight {
+  background-color: #dbf5cc; /* Change to your preferred highlight color */
+  border-color: #4c7335; /* Optional: Change border color when highlighted */
+}
+.count-section{
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
