--- a/src/App.css
+++ b/src/App.css
@@ -348,3 +348,12 @@ h1 {
   height: 1px;
   margin: 10px 26px;
 }
+.modal-img{
+  background: lightblue url(./component/img/carousel-2.jpg);
+  background-size: cover;
+}
+.login-form{
+  background-color: rgba(255, 255, 255, 0.4);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+}
